Algumas pequenas alterações para fazer a pagina de perfil